FIX: z-indexes (#230, #324)
closes #230
closes #324

--- a/src/components/NotesList/NotesList.less
+++ b/src/components/NotesList/NotesList.less
@@ -47,13 +47,17 @@
 
     // display Note when edit button is clicked
     .editing {
+      // The !important declaration here is necessary to override the higher specificity of
+      // the .note { display: none; } below.
       display           : block !important;
       inline-size       : 95%;
       inset-block-end   : var(--space-xs);
       inset-inline-start: calc(-1 * var(--border-width) + 2.5%);
       position          : absolute;
       transform         : translateY(100%);
-      z-index           : 2;
+      // This z-index only needs to be relative to the Notes List.
+      // Do not add to z-indexes.less;
+      z-index: 1;
     }
 
     .notes-list__closed-icon {
