--- a/src/App/App.less
+++ b/src/App/App.less
@@ -8,7 +8,7 @@
 @import 'HelpMenu/HelpMenu.less';
 
 :focus {
-  z-index: 2;
+  z-index: var(--z-focus);
 }
 
 .app {
