--- a/src/components/NavList/NavList.less
+++ b/src/components/NavList/NavList.less
@@ -18,7 +18,6 @@
     position          : absolute;
     inset-block-start : 0;
     width             : 0.25em;
-    z-index           : 1;
   }
 
   .current:first-child::before {
